2024-01-18T16:19:28Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7572899355 # 35
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-18
* notice: last 14d: unq all: 4 16
* notice: prev accum: outdated-unq outdated-all / unq all: 726 1147 / 737 1162
* notice: next accum: outdated-unq outdated-all / unq all: 726 1147 / 737 1163
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-01-18]

2024-01-18T08:18:52Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7567156361 # 34
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-18
* notice: last 14d: unq all: 4 15
* notice: prev accum: outdated-unq outdated-all / unq all: 726 1147 / 736 1161
* notice: next accum: outdated-unq outdated-all / unq all: 726 1147 / 737 1162
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-01-18]

2024-01-17T16:19:58Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7558665508 # 32
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-17
* notice: last 14d: unq all: 4 14
* notice: prev accum: outdated-unq outdated-all / unq all: 726 1147 / 735 1160
* notice: next accum: outdated-unq outdated-all / unq all: 726 1147 / 736 1161
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-01-17]

2024-01-15T08:20:21Z: