@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-01-18T16:19:28Z",
+  "timestamp" : "2024-01-19T08:19:23Z",
   "count_outdated" : 1147,
   "uniques_outdated" : 726,
-  "count" : 1163,
-  "uniques" : 737,
+  "count" : 1164,
+  "uniques" : 738,
   "clones" : [
     {
       "timestamp": "2024-01-07T00:00:00Z",
@@ -82,6 +82,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-01-19T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
