@@ -1,3 +1,12 @@
+2024-01-19T08:19:23Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7581196983 # 37
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-19
+* notice: last 14d: unq all: 4 17
+* notice: prev accum: outdated-unq outdated-all / unq all: 726 1147 / 737 1163
+* notice: next accum: outdated-unq outdated-all / unq all: 726 1147 / 738 1164
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-01-19]
+
 2024-01-18T16:19:28Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7572899355 # 35
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-18
